# fastapi-template-app

./: .env  .gitignore  Dockerfile  conftest.py  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  scaffold.py  seed.py  setup-dev.sh  setup.sh  tailwind.config.js
.s3/: init-aws.sh
app/: __init__.py  __main__.py  environment.py  fake.py  resolver.py  utils.py
app/cron/: __init__.py  crons.py  lifespan.py  services.py
app/database/: factory.py  logger.py  models.py  repository.py  service.py  sqlformatter.py
app/home/: controller.py
app/mail/: service.py
migrations/: 20241013225513_postgis.down.sql  20241013225513_postgis.up.sql  20241013225514_update_history_procedure.down.sql  20241013225514_update_history_procedure.up.sql  20241013225515_create_history_table.down.sql  20241013225515_create_history_table.up.sql  20241013225516_user.down.sql  20241013225516_user.up.sql  20241013225517_storage.down.sql  20241013225517_storage.up.sql  20241013225518_pgqueuer.down.sql  20241013225518_pgqueuer.up.sql  20241013225518_trigram.down.sql  20241013225518_trigram.up.sql  20241013225519_region.down.sql  20241013225519_region.up.sql  20241013225520_city.down.sql  20241013225520_city.up.sql  20241013225521_place.down.sql  20241013225521_place.up.sql  20241013225522_suggestion.down.sql  20241013225522_suggestion.up.sql
scripts/: run.sh
src/: __init__.py  __main__.py  autoreload.py  environment.py  faker.py  main.py  test_common.py  utils.py
static/: authentication.js  htmx.js  ws.js
templates/: base.html
(+134 files in other folders)
